# mail-deleter

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
src/: main.rs
