[package]
name = "mail-deleter"
version = "0.1.0"
authors = ["baalajimaestro <me@baalajimaestro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.0"
native-tls = "0.2.6"
base64 = "0.13.0"
regex = "1.4.2"
rustls-connector = "0.13.1"
